tests/objects/objects.exp
Error: compatibility.js:3
  3:     x = y; // 2 errors: `foo` not found in y.x; `bar` not found in x.x
             ^ object type. This type is incompatible with
  2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                   ^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `x` is incompatible:
      2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                            ^^^^^^^^^^^^^^^ object type. This type is incompatible with
      2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                                                       ^^^^^^^^^^^^^^^ object type
      Property `foo` is incompatible:
          2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                                ^^^^^^^^^^^^^^^ property `foo`. Property not found in
          2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                                                           ^^^^^^^^^^^^^^^ object type

Error: compatibility.js:3
  3:     x = y; // 2 errors: `foo` not found in y.x; `bar` not found in x.x
             ^ object type. This type is incompatible with
  2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                   ^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `x` is incompatible:
      2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                                                       ^^^^^^^^^^^^^^^ object type. This type is incompatible with
      2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                            ^^^^^^^^^^^^^^^ object type
      Property `bar` is incompatible:
          2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                                                           ^^^^^^^^^^^^^^^ property `bar`. Property not found in
          2:   function(x: { x: { foo: string } }, y: { x: { bar: number } }) {
                                ^^^^^^^^^^^^^^^ object type

Error: compatibility.js:7
  7:     x = y; // 2 errors: string !~> number; number !~> string
             ^ Cannot assign `y` to `x` because in property `foo`, number [1] is incompatible with string [2].
  References:
    6:   function(x: { foo: string }, y: { foo: number }) {
                                                ^^^^^^ [1]: number
    6:   function(x: { foo: string }, y: { foo: number }) {
                            ^^^^^^ [2]: string

Error: compatibility.js:11
 11:     x = y; // 2 errors: string !~> number; number !~> string
             ^ Cannot assign `y` to `x` because in property `x.foo`, number [1] is incompatible with string [2].
  References:
   10:   function(x: { x: { foo: string } }, y: { x: { foo: number } }) {
                                                            ^^^^^^ [1]: number
   10:   function(x: { x: { foo: string } }, y: { x: { foo: number } }) {
                                 ^^^^^^ [2]: string

Error: compatibility.js:15
 15:     x = y; // 1 error: number !~> string
             ^ Cannot assign `y` to `x` because in property `foo`, number [1] is incompatible with string [2].
  References:
   14:   function(x: { +foo: string }, y: { +foo: number }) {
                                                  ^^^^^^ [1]: number
   14:   function(x: { +foo: string }, y: { +foo: number }) {
                             ^^^^^^ [2]: string

Error: compatibility.js:19
 19:     x = y; // 2 errors: string !~> number; number !~> string
             ^ Cannot assign `y` to `x` because in property `x.foo`, number [1] is incompatible with string [2].
  References:
   18:   function(x: { x: { +foo: string } }, y: { x: { +foo: number } }) {
                                                              ^^^^^^ [1]: number
   18:   function(x: { x: { +foo: string } }, y: { x: { +foo: number } }) {
                                  ^^^^^^ [2]: string

Error: compatibility.js:23
 23:     x = y; // 1 error: string !~> number
             ^ Cannot assign `y` to `x` because in property `foo`, string [1] is incompatible with number [2].
  References:
   22:   function(x: { -foo: string }, y: { -foo: number }) {
                             ^^^^^^ [1]: string
   22:   function(x: { -foo: string }, y: { -foo: number }) {
                                                  ^^^^^^ [2]: number

Error: compatibility.js:27
 27:     x = y; // 2 errors: string !~> number; number !~> string
             ^ Cannot assign `y` to `x` because in property `x.foo`, number [1] is incompatible with string [2].
  References:
   26:   function(x: { x: { -foo: string } }, y: { x: { -foo: number } }) {
                                                              ^^^^^^ [1]: number
   26:   function(x: { x: { -foo: string } }, y: { x: { -foo: number } }) {
                                  ^^^^^^ [2]: string

Error: conversion.js:10
 10: (Object(undefined): Number); // error
      ^^^^^^^^^^^^^^^^^ Cannot cast `Object(...)` to `Number` because object type [1] is incompatible with `Number` [2].
  References:
   26:     static (o: ?void): {[key: any]: any};
                              ^^^^^^^^^^^^^^^^^ [1]: object type. See lib: <BUILTINS>/core.js:26
   10: (Object(undefined): Number); // error
                           ^^^^^^ [2]: `Number`

Error: conversion.js:19
 19: (z.charAt(0): string);
        ^^^^^^ property `charAt`. Property not found in
 19: (z.charAt(0): string);
      ^ Number

Error: objects.js:4
  4: (x.foo : string);     // error, key doesn't exist
        ^^^ property `foo`. Property not found in
  4: (x.foo : string);     // error, key doesn't exist
      ^ object type

Error: objects.js:5
  5: (x['foo'] : string);  // error, key doesn't exist
        ^^^^^ property `foo`. Property not found in
  5: (x['foo'] : string);  // error, key doesn't exist
      ^ object type

Error: objects.js:7
  7: (x.bar: boolean);     // error, string !~> boolean
      ^^^^^ Cannot cast `x.bar` to boolean because string [1] is incompatible with boolean [2].
  References:
    3: var x : {'123': string, bar: string} = {'123': 'val', bar: 'bar'};
                                    ^^^^^^ [1]: string
    7: (x.bar: boolean);     // error, string !~> boolean
               ^^^^^^^ [2]: boolean

Error: objects.js:8
  8: (x['123'] : boolean); // error, string !~> boolean
      ^^^^^^^^ Cannot cast `x['123']` to boolean because string [1] is incompatible with boolean [2].
  References:
    3: var x : {'123': string, bar: string} = {'123': 'val', bar: 'bar'};
                       ^^^^^^ [1]: string
    8: (x['123'] : boolean); // error, string !~> boolean
                   ^^^^^^^ [2]: boolean

Error: objects.js:9
  9: x['123'] = false;     // error, boolean !~> string
                ^^^^^ Cannot assign `false` to `x['123']` because boolean [1] is incompatible with string [2].
  References:
    9: x['123'] = false;     // error, boolean !~> string
                  ^^^^^ [1]: boolean
    3: var x : {'123': string, bar: string} = {'123': 'val', bar: 'bar'};
                       ^^^^^^ [2]: string

Error: objects.js:12
 12: (x[`foo`]: string);   // error, key doesn't exist
        ^^^^^ property `foo`. Property not found in
 12: (x[`foo`]: string);   // error, key doesn't exist
      ^ object type

Error: objects.js:15
 15: y['foo'] = 123; // error, number !~> string
                ^^^ Cannot assign `123` to `y['foo']` because number [1] is incompatible with string [2].
  References:
   15: y['foo'] = 123; // error, number !~> string
                  ^^^ [1]: number
   14: var y : {foo: string} = {foo: 'bar'};
                     ^^^^^^ [2]: string

Error: objects.js:16
 16: y['bar'] = 'abc'; // error, property not found
       ^^^^^ property `bar`. Property not found in
 16: y['bar'] = 'abc'; // error, property not found
     ^ object type

Error: objects.js:18
 18: (y['hasOwnProperty']: string); // error, prototype method is not a string
      ^^^^^^^^^^^^^^^^^^^ Cannot cast `y['hasOwnProperty']` to string because function type [1] is incompatible with string [2].
  References:
   50:     hasOwnProperty(prop: any): boolean;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: function type. See lib: <BUILTINS>/core.js:50
   18: (y['hasOwnProperty']: string); // error, prototype method is not a string
                             ^^^^^^ [2]: string

Error: unaliased_assign.js:20
 20:   glob = obj;    // error: subsequent assignment might make glob.x a number
              ^^^ Cannot assign `obj` to `glob` because in property `x`, number [1] is incompatible with string [2].
  References:
   18:   var obj: { x: string | number };
                                ^^^^^^ [1]: number
   15: var glob: { x: string } = { x: "hey" };
                      ^^^^^^ [2]: string


Found 20 errors
